--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "PhaserES6Webpack",
-    "version": "1.1.0",
+    "name": "PhaserIntro",
+    "version": "0.0.1",
     "description": "",
-    "author": "leandro cabrera <leandcabrera@gmail.com>",
+    "author": "Sam Miller>",
     "main": "index.js",
     "scripts": {
         "dev": "webpack",
